// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBarContainer should match a snapshot 1`] = `
<ProgressBarContainer>
  <ElProgressBarContainer>
    <div
      className="el-progress-bar-container"
    />
  </ElProgressBarContainer>
</ProgressBarContainer>
`;

exports[`ProgressBarInner should match a snapshot 1`] = `
<ProgressBarInner>
  <ElProgressBarInner>
    <div
      className="el-progress-bar-inner"
    />
  </ElProgressBarInner>
</ProgressBarInner>
`;

exports[`ProgressBarItem should match a snapshot 1`] = `
<ProgressBarItem>
  <ElProgressBarItem>
    <div
      className="el-progress-bar-item"
    />
  </ElProgressBarItem>
</ProgressBarItem>
`;

exports[`ProgressBarPercentage should match a snapshot 1`] = `
<ProgressBarPercentage
  duration={20}
>
  <ProgressBarContainer>
    <ElProgressBarContainer>
      <div
        className="el-progress-bar-container"
      >
        <ProgressBarInner
          style={
            Object {
              "transitionDuration": "0.3333333333333333s",
              "width": "0%",
            }
          }
        >
          <ElProgressBarInner
            style={
              Object {
                "transitionDuration": "0.3333333333333333s",
                "width": "0%",
              }
            }
          >
            <div
              className="el-progress-bar-inner"
              style={
                Object {
                  "transitionDuration": "0.3333333333333333s",
                  "width": "0%",
                }
              }
            >
              <ProgressBarItem
                className="el-progress-bar-item-dark-blue"
              >
                <ElProgressBarItem
                  className="el-progress-bar-item-dark-blue"
                >
                  <div
                    className="el-progress-bar-item-dark-blue el-progress-bar-item"
                  />
                </ElProgressBarItem>
              </ProgressBarItem>
              <ProgressBarItem
                className="el-progress-bar-item-medium-blue"
              >
                <ElProgressBarItem
                  className="el-progress-bar-item-medium-blue"
                >
                  <div
                    className="el-progress-bar-item-medium-blue el-progress-bar-item"
                  />
                </ElProgressBarItem>
              </ProgressBarItem>
              <ProgressBarItem
                className="el-progress-bar-item-light-blue"
              >
                <ElProgressBarItem
                  className="el-progress-bar-item-light-blue"
                >
                  <div
                    className="el-progress-bar-item-light-blue el-progress-bar-item"
                  />
                </ElProgressBarItem>
              </ProgressBarItem>
              <ProgressBarItem
                className="el-progress-bar-item-lightest-blue"
              >
                <ElProgressBarItem
                  className="el-progress-bar-item-lightest-blue"
                >
                  <div
                    className="el-progress-bar-item-lightest-blue el-progress-bar-item"
                  />
                </ElProgressBarItem>
              </ProgressBarItem>
              <ProgressBarItem
                className="el-progress-bar-item-orange"
              >
                <ElProgressBarItem
                  className="el-progress-bar-item-orange"
                >
                  <div
                    className="el-progress-bar-item-orange el-progress-bar-item"
                  />
                </ElProgressBarItem>
              </ProgressBarItem>
            </div>
          </ElProgressBarInner>
        </ProgressBarInner>
        <ProgressBarLabel
          className="el-progress-bar-label-right"
        >
          <ElProgressBarLabel
            className="el-progress-bar-label-right"
          >
            <div
              className="el-progress-bar-label-right el-progress-bar-label"
            >
              0
              %
            </div>
          </ElProgressBarLabel>
        </ProgressBarLabel>
      </div>
    </ElProgressBarContainer>
  </ProgressBarContainer>
</ProgressBarPercentage>
`;

exports[`ProgressBarSteps should match a snapshot 1`] = `
<ProgressBarSteps
  currentStep={5}
  numberSteps={10}
>
  <ProgressBarContainer>
    <ElProgressBarContainer>
      <div
        className="el-progress-bar-container"
      >
        <ProgressBarInner
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <ElProgressBarInner
            style={
              Object {
                "width": "50%",
              }
            }
          >
            <div
              className="el-progress-bar-inner"
              style={
                Object {
                  "width": "50%",
                }
              }
            >
              <ProgressBarItem
                className="el-progress-bar-item-dark-blue"
              >
                <ElProgressBarItem
                  className="el-progress-bar-item-dark-blue"
                >
                  <div
                    className="el-progress-bar-item-dark-blue el-progress-bar-item"
                  />
                </ElProgressBarItem>
              </ProgressBarItem>
              <ProgressBarItem
                className="el-progress-bar-item-medium-blue"
              >
                <ElProgressBarItem
                  className="el-progress-bar-item-medium-blue"
                >
                  <div
                    className="el-progress-bar-item-medium-blue el-progress-bar-item"
                  />
                </ElProgressBarItem>
              </ProgressBarItem>
              <ProgressBarItem
                className="el-progress-bar-item-light-blue"
              >
                <ElProgressBarItem
                  className="el-progress-bar-item-light-blue"
                >
                  <div
                    className="el-progress-bar-item-light-blue el-progress-bar-item"
                  />
                </ElProgressBarItem>
              </ProgressBarItem>
              <ProgressBarItem
                className="el-progress-bar-item-lightest-blue"
              >
                <ElProgressBarItem
                  className="el-progress-bar-item-lightest-blue"
                >
                  <div
                    className="el-progress-bar-item-lightest-blue el-progress-bar-item"
                  />
                </ElProgressBarItem>
              </ProgressBarItem>
              <ProgressBarItem
                className="el-progress-bar-item-orange"
              >
                <ElProgressBarItem
                  className="el-progress-bar-item-orange"
                >
                  <div
                    className="el-progress-bar-item-orange el-progress-bar-item"
                  />
                </ElProgressBarItem>
              </ProgressBarItem>
            </div>
          </ElProgressBarInner>
        </ProgressBarInner>
        <ProgressBarLabel
          className="el-progress-bar-label-left"
        >
          <ElProgressBarLabel
            className="el-progress-bar-label-left"
          >
            <div
              className="el-progress-bar-label-left el-progress-bar-label"
            >
              5
              /
              10
               Completed
            </div>
          </ElProgressBarLabel>
        </ProgressBarLabel>
      </div>
    </ElProgressBarContainer>
  </ProgressBarContainer>
</ProgressBarSteps>
`;
